feat: complete archicteture
